test/data/semantic-errors/semantic-errors.bool
let x:int = 3
let y:int = tru
